[gd_scene load_steps=15 format=3 uid="uid://cn60hcbgoy2jm"]

[ext_resource type="Script" path="res://Code/Main.gd" id="1_11hvt"]
[ext_resource type="Texture2D" uid="uid://c2u58tiq1i368" path="res://Tilemap/GTJAM22_mocap1_2.png" id="1_lm064"]
[ext_resource type="PackedScene" uid="uid://cf4o7j7wbq0px" path="res://Scenes/Platform.tscn" id="2_sj452"]
[ext_resource type="Texture2D" uid="uid://c8db8d5e0ivks" path="res://Tilemap/tiles2.png" id="3_t41ef"]
[ext_resource type="Texture2D" uid="uid://fdcl2n1h4c6s" path="res://Image/GTJAM22_Background.png" id="5_ix1h0"]
[ext_resource type="AudioStream" uid="uid://did02ixytgk4o" path="res://Music/Gameplay_Finished.mp3" id="6_1rvey"]
[ext_resource type="PackedScene" uid="uid://c7apulvv7cag2" path="res://Scenes/Charecter.tscn" id="6_dpstv"]
[ext_resource type="PackedScene" uid="uid://ctcrlqjd13suk" path="res://Scenes/UI.tscn" id="9_lxwcq"]
[ext_resource type="PackedScene" uid="uid://ceo8pk4ilm40a" path="res://Scenes/Lenta.tscn" id="11_yhg63"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m4p0c"]
texture = ExtResource("1_lm064")
texture_region_size = Vector2i(64, 64)
0:0/next_alternative_id = 2
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:0/0/terrains_peering_bit/right_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0/terrains_peering_bit/right_side = 0
2:0/0/terrains_peering_bit/left_side = 0
3:0/0 = 0
3:0/0/terrain_set = 0
3:0/0/terrain = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
3:0/0/terrains_peering_bit/right_side = 0
3:0/0/terrains_peering_bit/left_side = 0
4:0/0 = 0
4:0/0/terrain_set = 0
4:0/0/terrain = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
4:0/0/terrains_peering_bit/right_side = 0
4:0/0/terrains_peering_bit/left_side = 0
5:0/0 = 0
5:0/0/terrain_set = 0
5:0/0/terrain = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
5:0/0/terrains_peering_bit/left_side = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o5yuc"]
texture = ExtResource("3_t41ef")
texture_region_size = Vector2i(64, 64)
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_7qjk1"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 2
terrain_set_0/terrain_0/name = "Platform"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_m4p0c")
sources/1 = SubResource("TileSetAtlasSource_o5yuc")

[sub_resource type="GDScript" id="GDScript_q6nyf"]
script/source = "extends TileMap


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="Curve2D" id="Curve2D_3oqdk"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 16, -1280, 0, 0, 0, 0, 960, -1280, 0, 0, 0, 0, 16, -1280)
}
point_count = 3

[node name="Node" type="Node"]
script = ExtResource("1_11hvt")
Platform = ExtResource("2_sj452")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(576, -639.94)
scale = Vector2(1.00436, 1.9755)
texture = ExtResource("5_ix1h0")

[node name="TileMap" type="TileMap" parent="."]
scale = Vector2(1.00645, 1)
tile_set = SubResource("TileSet_7qjk1")
cell_quadrant_size = 64
format = 2
layer_0/name = "Platfom"
script = SubResource("GDScript_q6nyf")

[node name="Charecter" parent="." instance=ExtResource("6_dpstv")]
position = Vector2(472, -1480)

[node name="Camera2D" type="Camera2D" parent="Charecter"]
limit_left = -200
limit_top = -1450
limit_right = 1350
limit_bottom = 0

[node name="Lentes" type="Node2D" parent="."]

[node name="Lenta" parent="Lentes" instance=ExtResource("11_yhg63")]

[node name="Lenta2" parent="Lentes" instance=ExtResource("11_yhg63")]
position = Vector2(-96, -966)

[node name="Lenta3" parent="Lentes" instance=ExtResource("11_yhg63")]
position = Vector2(1248, -966)

[node name="Lenta4" parent="Lentes" instance=ExtResource("11_yhg63")]
position = Vector2(1248, -328)

[node name="PlatformPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_3oqdk")

[node name="PlatformPathFollow" type="PathFollow2D" parent="PlatformPath"]
position = Vector2(16, -1280)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1rvey")
volume_db = -7.0
autoplay = true

[node name="Start_spawn" type="Timer" parent="."]
wait_time = 4.0

[node name="CanvasLayer" parent="." instance=ExtResource("9_lxwcq")]

[node name="Patform" type="Node2D" parent="."]

[node name="Platform" parent="Patform" instance=ExtResource("2_sj452")]
position = Vector2(448, -1280)

[node name="Platform2" parent="Patform" instance=ExtResource("2_sj452")]
position = Vector2(512, -1280)

[node name="Platform3" parent="Patform" instance=ExtResource("2_sj452")]
position = Vector2(576, -1280)

[node name="Platform4" parent="Patform" instance=ExtResource("2_sj452")]
position = Vector2(640, -1280)

[connection signal="timeout" from="Start_spawn" to="." method="_on_timer_timeout"]
